Sprint 12 - after review

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://buyanov-dmitriy.github.io/mesto-react-auth",
+  "homepage": "https://buyanov-dmitriy.github.io/react-mesto-auth",
   "name": "react-mesto-auth",
   "version": "0.1.0",
   "private": true,
